--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=#@Sanju8745
+spring.datasource.username=USER_NAME
+spring.datasource.password=PASSWORD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
